# apple-photos-to-immich-meta-sync

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/immich_favorite_sync/: __init__.py  __main__.py  album_config.py  album_sync.py  config.py  immich_client.py  local_photos_client.py  matcher.py  models.py  sync.py
tests/: __init__.py  conftest.py  test_album_config.py  test_album_sync.py  test_cli.py  test_config.py  test_immich_client_albums.py  test_local_photos_client.py  test_matcher.py  test_sync.py
