[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immich-favorite-sync"
version = "0.1.0"
description = "Sync Photos favorites to Immich"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Waters" }
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
immich-favorite-sync = "immich_favorite_sync.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/immich_favorite_sync"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=immich_favorite_sync",
]
